--- a/src/output/eval.css
+++ b/src/output/eval.css
@@ -1,10 +1,9 @@
-/* src/components/EvaluationPage.css */
-.evaluation-container {
+.evaluation-container{
     font-family: sans-serif;
     background: #fff;
     margin-bottom: 80px;
-  }
-  .evaluation-title {
+} 
+.evaluation-title {
     margin-bottom: 40px;
     border-left: 4px solid #4b6cb7;
     padding-left: 12px;
@@ -22,12 +21,17 @@
     gap: 12px;
   }
   .avatar {
+    position: relative;
     width: 80px;
     height: 80px;
-    background: #ccc;
     border-radius: 50%;
     flex-shrink: 0;
   }
+  .avatar img{
+    position: absolute;
+    width: 80px;
+    height: 80px;
+}
   .bubble {
     background: #f0ece3;
     padding: 30px 32px;
@@ -56,6 +60,6 @@
     margin: 0;
     line-height: 1.4;
     color: #333;
-    font-size: 19x;
+    font-size: 19px;
   }
   
